{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 12,
  "lineage": "f34bbc7f-a2d6-8620-0490-d6fa0724dff1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "core_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:route-table/rtb-060d50e84303d0da3",
            "default_route_table_id": "rtb-060d50e84303d0da3",
            "id": "rtb-060d50e84303d0da3",
            "owner_id": "616840711618",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [
              {
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0b4fab8de0b8b3da1"
              }
            ],
            "tags": {
              "Name": "CoreServices-Default-RT"
            },
            "tags_all": {
              "Name": "CoreServices-Default-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b114793bc8ac613d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.core",
            "aws_vpc.manufacturing",
            "aws_vpc_peering_connection.core_to_manu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "manu_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:route-table/rtb-0f8117a10c52d9a85",
            "default_route_table_id": "rtb-0f8117a10c52d9a85",
            "id": "rtb-0f8117a10c52d9a85",
            "owner_id": "616840711618",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [
              {
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0b4fab8de0b8b3da1"
              }
            ],
            "tags": {
              "Name": "Manufacturing-Default-RT"
            },
            "tags_all": {
              "Name": "Manufacturing-Default-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c105ac51770a993"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.core",
            "aws_vpc.manufacturing",
            "aws_vpc_peering_connection.core_to_manu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nva",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:network-interface/eni-00a38cd834fbae94a",
            "id": "eni-00a38cd834fbae94a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:31:15:08:0b:cb",
            "owner_id": "616840711618",
            "private_ip": "10.0.1.7",
            "private_ip_list": [
              "10.0.1.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.7"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0a20a5ef9e09fada1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0addf563fd6013628",
            "tags": {
              "Name": "NVA-Interface"
            },
            "tags_all": {
              "Name": "NVA-Interface"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.perimeter",
            "aws_vpc.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:route-table/rtb-09bdf3b50cc3e7b59",
            "id": "rtb-09bdf3b50cc3e7b59",
            "owner_id": "616840711618",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-00a38cd834fbae94a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-CoreServices"
            },
            "tags_all": {
              "Name": "rt-CoreServices"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b114793bc8ac613d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "rtb-09bdf3b50cc3e7b59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.nva",
            "aws_subnet.perimeter",
            "aws_vpc.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "perimeter_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb25c3ae31529d9",
            "region": "us-east-1",
            "route_table_id": "rtb-09bdf3b50cc3e7b59",
            "subnet_id": "subnet-0addf563fd6013628"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "rtbassoc-0dcb25c3ae31529d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.nva",
            "aws_route_table.rt_core",
            "aws_subnet.perimeter",
            "aws_vpc.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "core_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:subnet/subnet-01c2fbcb507cbd917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c2fbcb507cbd917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616840711618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "CoreSubnet"
            },
            "tags_all": {
              "Name": "CoreSubnet"
            },
            "vpc_id": "vpc-0b114793bc8ac613d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "subnet-01c2fbcb507cbd917",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "manufacturing_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:subnet/subnet-0d23a6454d1260689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d23a6454d1260689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616840711618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ManufacturingSubnet"
            },
            "tags_all": {
              "Name": "ManufacturingSubnet"
            },
            "vpc_id": "vpc-04c105ac51770a993"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "subnet-0d23a6454d1260689",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.manufacturing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "perimeter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:subnet/subnet-0addf563fd6013628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0addf563fd6013628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616840711618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PerimeterSubnet"
            },
            "tags_all": {
              "Name": "PerimeterSubnet"
            },
            "vpc_id": "vpc-0b114793bc8ac613d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "subnet-0addf563fd6013628",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:vpc/vpc-0b114793bc8ac613d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1f0cb594121470a",
            "default_route_table_id": "rtb-060d50e84303d0da3",
            "default_security_group_id": "sg-0a20a5ef9e09fada1",
            "dhcp_options_id": "dopt-04c02337e76361e0d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b114793bc8ac613d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060d50e84303d0da3",
            "owner_id": "616840711618",
            "region": "us-east-1",
            "tags": {
              "Name": "CoreServicesVnet"
            },
            "tags_all": {
              "Name": "CoreServicesVnet"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "vpc-0b114793bc8ac613d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "manufacturing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616840711618:vpc/vpc-04c105ac51770a993",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0cb3643527c3180e9",
            "default_route_table_id": "rtb-0f8117a10c52d9a85",
            "default_security_group_id": "sg-01062777beed8fdf3",
            "dhcp_options_id": "dopt-04c02337e76361e0d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c105ac51770a993",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8117a10c52d9a85",
            "owner_id": "616840711618",
            "region": "us-east-1",
            "tags": {
              "Name": "ManufacturingVnet"
            },
            "tags_all": {
              "Name": "ManufacturingVnet"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616840711618",
            "id": "vpc-04c105ac51770a993",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "core_to_manu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0b4fab8de0b8b3da1",
            "peer_owner_id": "616840711618",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04c105ac51770a993",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "CoreServices-to-Manufacturing-Peering"
            },
            "tags_all": {
              "Name": "CoreServices-to-Manufacturing-Peering"
            },
            "vpc_id": "vpc-0b114793bc8ac613d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.core",
            "aws_vpc.manufacturing"
          ]
        }
      ]
    }
  ]
}